--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
-
 /* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-
 
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
-
 
 /* ==========================================================================
    Base styles: opinionated defaults
@@ -20,7 +17,6 @@ html {
     font-size: 1em;
     line-height: 1.4;
 }
-
 
 /*
  * Remove text-shadow in selection highlight:
@@ -42,7 +38,6 @@ html {
     text-shadow: none;
 }
 
-
 /*
  * A better looking default horizontal rule
  */
@@ -56,22 +51,15 @@ hr {
     padding: 0;
 }
 
-
 /*
  * Remove the gap between audio, canvas, iframes,
  * images, videos and the bottom of their containers:
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+audio, canvas, iframe, img, svg, video {
     vertical-align: middle;
 }
-
 
 /*
  * Remove default fieldset styles.
@@ -83,7 +71,6 @@ fieldset {
     padding: 0;
 }
 
-
 /*
  * Allow only vertical resizing of textareas.
  */
@@ -92,10 +79,15 @@ textarea {
     resize: vertical;
 }
 
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+@media (max-width: 600px) {
+    img {
+        max-width: 100%;
+    }
+}
 
 #particles-js {
     height: 100vh;
@@ -104,38 +96,66 @@ textarea {
     z-index: -1;
 }
 
+.container {
+    max-width: 90%;
+    margin: 0 auto;
+}
+
 .contenedor-header {
     padding-top: 5rem;
     margin: 0 auto;
 }
 
-p {
+p, a {
     font-family: 'Assistant', sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'GlacialIndifferenceRegular', sans-serif;
     font-weight: 'bolder';
 }
 
+.contenedor-navegacion .nav-header a {
+    color: #5ba7d1;
+    text-decoration: none;
+    margin-left: 1rem;
+    transition: 0.3s;
+}
+
+.contenedor-navegacion .nav-header a:hover {
+    color: #335384;
+    border: #335384;
+}
+
 .contenedor-navegacion nav {
+    display: flex;
+    justify-content: flex-end;
     padding: 1rem 0rem;
 }
 
 .contenedor-navegacion nav a i {
     color: #335384;
     font-size: 3rem;
+    margin-right: .5rem;
+}
+
+@media (max-width: 600px) {
+    .contenedor-header .contenedor-navegacion {
+        display: none;
+    }
 }
 
 .contenedor-presentacion {
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 65% 35%;
     margin: 0 3rem;
+}
+
+@media (max-width: 600px) {
+    .contenedor-presentacion {
+        display: block;
+        width: 85%!important;
+    }
 }
 
 .contenedor-presentacion .contenedor-parrafo-bio h1 {
@@ -151,26 +171,113 @@ h6 {
 }
 
 .contenedor-imagen-bio img {
-    max-width: 30rem;
-    max-height: 30rem;
-    border-radius: 50%;
+    max-width: 37rem;
+    max-height: 37rem;
 }
 
+@media (max-width: 600px) {
+    .contenedor-imagen-bio img {
+        max-width: 100%;
+    }
+}
+
+/* CONTENEDOR FLECHA PASAJE A LA SECTION DE TECNOLOGIAS */
+
+.contenedor-flecha-abajo {
+    display: flex;
+    justify-content: center;
+}
+
+.contenedor-flecha-abajo i {
+    color: #335384;
+    font-size: 5rem;
+}
+
+/* SECCION TECNOLOGIAS */
+
+main .contenedor-tecnologias {
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+
+@media (max-width: 600px) {
+    main .contenedor-tecnologias {
+        display: block;
+    }
+}
+
+@media (max-width: 600px) {
+    main .contenedor-tecnologias .contenedor-imagen-main {
+        max-width: 15rem;
+        display: block;
+    }
+    main .contenedor-tecnologias .contenedor-imagen-main img{
+       text-align: center;
+    }
+    main div .contenedor-texto-main {
+        text-align: center;
+    }
+}
+
+main div .contenedor-texto-main h2 {
+    color: #335384;
+    font-size: 3rem;
+}
+
+main div .contenedor-texto-main h3 {
+    color: #5ba7d1;
+    font-size: 1.5rem;
+}
+
+main div .contenedor-imagen-main {
+    text-align: center;
+    padding: 1rem;
+}
+
+/*barra progreso*/
+
+.conocimiento-contenedor {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.conocimiento-contenedor p {
+    color: #335384;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+#conocimiento-tecnologia {
+    /* Elimino la apariencia por defecto */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 90%;
+    background: #000;
+}
+
+#conocimiento-tecnologia::-webkit-progress-value {
+    background: #335384;
+}
+
+#conocimiento-tecnologia::-webkit-progress-bar {
+    background-color: #D8D8D8;
+    opacity: 0.8;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
 
-
 /*
  * Hide visually and from screen readers
  */
 
-.hidden,
-[hidden] {
+.hidden, [hidden] {
     display: none !important;
 }
-
 
 /*
  * Hide only visually, but have it available for screen readers:
@@ -194,15 +301,13 @@ h6 {
     /* 1 */
 }
 
-
 /*
  * Extends the .sr-only class to allow the element
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
 
-.sr-only.focusable:active,
-.sr-only.focusable:focus {
+.sr-only.focusable:active, .sr-only.focusable:focus {
     clip: auto;
     height: auto;
     margin: 0;
@@ -212,7 +317,6 @@ h6 {
     width: auto;
 }
 
-
 /*
  * Hide visually and from screen readers, but maintain layout
  */
@@ -220,7 +324,6 @@ h6 {
 .invisible {
     visibility: hidden;
 }
-
 
 /*
  * Clearfix: contain floats
@@ -234,8 +337,7 @@ h6 {
  *    `:before` to contain the top-margins of child elements.
  */
 
-.clearfix::before,
-.clearfix::after {
+.clearfix::before, .clearfix::after {
     content: " ";
     display: table;
 }
@@ -243,7 +345,6 @@ h6 {
 .clearfix::after {
     clear: both;
 }
-
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
@@ -255,13 +356,9 @@ h6 {
     /* Style adjustments for viewports that meet the condition */
 }
 
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 1.25dppx),
-(min-resolution: 120dpi) {
+@media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
-
 
 /* ==========================================================================
    Print styles.
@@ -270,17 +367,14 @@ h6 {
    ========================================================================== */
 
 @media print {
-    *,
-    *::before,
-    *::after {
+    *, *::before, *::after {
         background: #fff !important;
         color: #000 !important;
         /* Black prints faster */
         box-shadow: none !important;
         text-shadow: none !important;
     }
-    a,
-    a:visited {
+    a, a:visited {
         text-decoration: underline;
     }
     a[href]::after {
@@ -293,15 +387,13 @@ h6 {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-    a[href^="#"]::after,
-    a[href^="javascript:"]::after {
+    a[href^="#"]::after, a[href^="javascript:"]::after {
         content: "";
     }
     pre {
         white-space: pre-wrap !important;
     }
-    pre,
-    blockquote {
+    pre, blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
@@ -312,18 +404,14 @@ h6 {
     thead {
         display: table-header-group;
     }
-    tr,
-    img {
+    tr, img {
         page-break-inside: avoid;
     }
-    p,
-    h2,
-    h3 {
+    p, h2, h3 {
         orphans: 3;
         widows: 3;
     }
-    h2,
-    h3 {
+    h2, h3 {
         page-break-after: avoid;
     }
 }
